--- a/app/src/main/res/layout/fragment_pull_refresh_listview.xml
+++ b/app/src/main/res/layout/fragment_pull_refresh_listview.xml
@@ -6,12 +6,20 @@
 
     <!-- google 官方下拉刷新 -->
 
+    <cn.buaa.sn2ov.subsurveyplus.view.empty.EmptyLayout
+        android:id="@+id/error_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swiperefreshlayout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/background"
-        android:visibility="visible">
+        android:visibility="visible"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <ListView
             android:id="@+id/listview"
@@ -23,11 +31,5 @@
             android:scrollbars="none"
             android:scrollingCache="true"/>
     </android.support.v4.widget.SwipeRefreshLayout>
-
-    <cn.buaa.sn2ov.subsurveyplus.view.empty.EmptyLayout
-        android:id="@+id/error_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
 
 </RelativeLayout>
