--- a/app/src/main/res/layout/fragment_transfer_setting.xml
+++ b/app/src/main/res/layout/fragment_transfer_setting.xml
@@ -6,6 +6,12 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+    <cn.buaa.sn2ov.subsurveyplus.view.empty.EmptyLayout
+        android:id="@+id/transSetting_error_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/transSetting_swipeRefeshL"
         android:layout_width="match_parent"
