--- a/app/src/main/res/layout/view_error_layout.xml
+++ b/app/src/main/res/layout/view_error_layout.xml
@@ -4,7 +4,7 @@
                 android:id="@+id/pageerrLayout"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="@drawable/list_item_background">
+                android:background="@color/background">
 
     <RelativeLayout
         android:layout_width="fill_parent"
