--- a/app/src/main/res/layout/lay_gallery_page_item_contener.xml
+++ b/app/src/main/res/layout/lay_gallery_page_item_contener.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center" />
 
-    <net.oschina.common.widget.Loading
+    <cn.buaa.sn2ov.subsurveyplus.view.loading.Loading
         android:id="@+id/loading"
         android:layout_width="@dimen/size_32"
         android:layout_height="@dimen/size_32"
