--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -37,11 +37,11 @@
 
     <ImageView
         android:id="@+id/nav_head_avatarIV"
-        android:layout_width="136dp"
         android:layout_height="77dp"
         app:srcCompat="@drawable/avatar"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:paddingTop="25dp"/>
+        android:paddingTop="25dp"
+        android:layout_width="130dp"/>
 
 </RelativeLayout>
