--- a/app/src/main/res/layout/fragment_pull_refresh_listview.xml
+++ b/app/src/main/res/layout/fragment_pull_refresh_listview.xml
@@ -28,7 +28,7 @@
             android:divider="@color/white"
             android:listSelector="@color/transparent"
             android:dividerHeight="1px"
-            android:scrollbars="none"
+            android:scrollbars="horizontal"
             android:scrollingCache="true"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
