--- a/app/src/main/res/layout/fragment_pull_refresh_listview.xml
+++ b/app/src/main/res/layout/fragment_pull_refresh_listview.xml
@@ -12,7 +12,8 @@
         android:layout_height="match_parent"
         android:visibility="gone"/>
 
-    <android.support.v4.widget.SwipeRefreshLayout
+
+    <cn.buaa.sn2ov.subsurveyplus.view.TotalDataSwipeRefreshLayout
         android:id="@+id/swiperefreshlayout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -20,16 +21,23 @@
         android:visibility="visible"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
-
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:divider="@color/white"
-            android:listSelector="@color/transparent"
-            android:dividerHeight="1px"
-            android:scrollbars="horizontal"
-            android:scrollingCache="true"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+        <HorizontalScrollView
+            android:id="@+id/refresh_HorizontalScrollView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:scrollbars="none"
+            >
+            <cn.buaa.sn2ov.subsurveyplus.view.TotalDtataListView
+                android:id="@+id/listview"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:divider="@color/white"
+                android:listSelector="@color/transparent"
+                android:dividerHeight="1px"
+                android:scrollingCache="true"
+                android:scrollbars="horizontal"/>
+        </HorizontalScrollView>
+    </cn.buaa.sn2ov.subsurveyplus.view.TotalDataSwipeRefreshLayout>
 
 </RelativeLayout>
